--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@opentui/core": "^0.1.63",
-    "@opentui/react": "^0.1.63",
+    "@opentui/core": "0.0.0-20260106-bb82df43",
+    "@opentui/react": "0.0.0-20260106-bb82df43",
+    "comma-cli-darwin-arm64": "^0.1.0",
     "fuse.js": "^7.1.0",
     "react": "^19.2.3"
   }
